<resources>
    <string name="app_name">SmartShopper</string>
    <string name="title_activity_main">main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SmartShopper</string>
    <string name="nav_header_subtitle">The smart way to shop.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">View Map</string>
    <string name="menu_stores">Stores</string>
    <string name="menu_profile">Your Profile</string>
    <string name="menu_edits">Make Edits</string>
    <string name="menu_signout">Sign Out</string>
</resources>
