<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_stores"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/menu_stores" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_edits"
            android:icon="@drawable/ic_announcement_black_24dp"
            android:title="@string/menu_edits" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/menu_signout" />
    </group>

</menu>
